[package]
name = "rcrash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"            # 用于错误处理
deno_core = "0.162.0"     # 或者使用最新版本 (对应 Deno runtime 核心)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"